--- a/sdp_individual_move_variation_nb.Rmd
+++ b/sdp_individual_move_variation_nb.Rmd
@@ -139,8 +139,9 @@ max_y <- max(coords$y)
   
 ## set up moves to sample from
 moveset <- tibble(
-    x = rep(c(-1, 0, 1), 3),
-    y = rep(c(-1, 0, 1), each = 3)
+    move_id = 1:9,
+    xmove = rep(c(0, -1, 1), 3),
+    ymove = rep(c(0, -1, 1), each = 3)
     )
   
 c(1, rep(5, 0))
@@ -151,10 +152,30 @@ c(1, rep(5, 0))
 ##### THIS IS IT 
 hosts_moving <- hosts[rep(1:nrow(hosts), each = n_moves + 1),] %>%
   mutate(time = rep(0:n_moves, n_hosts),
-         inactive = inactivity * runif(n()))
+         active = inactivity * sample(1:9, size = n(), replace = TRUE) < 1,
+         move_id = sample(2:9, size = n(), replace = TRUE)^active) %>%
+  left_join(moveset, by = "move_id") %>%
+  mutate(xmove = if_else(time == 0, x, as.integer(xmove)),
+         ymove = if_else(time == 0, y, as.integer(ymove))) %>%
+  group_by(host_id) %>%
+  mutate(pre_x = cumsum(xmove),
+         pre_y = cumsum(ymove),
+         oob_x = (pre_x - 1) %/% max_x, ## calc out of bounds
+         oob_y = (pre_y - 1) %/% max_y,
+         x = pre_x - (max_x * oob_x), ## wrap around torus
+         y = pre_y - (max_y * oob_y),
+         id = str_c(x, y, sep = "_")
+         ) %>%
+  left_join(select(coords, id, value), by = "id") %>% ## bring in parasite info
+  mutate(parasite_gain = value * rbinom(n = n(), size = 1, prob = 0.5),
+           parasite_burden = cumsum(parasite_gain)) ## attach parasites
 #####
   
+length(rep(c(NA, inactivity * sample(1:9, size = n_moves, replace = TRUE) < 1), n_hosts))
 
+(9^FALSE)
+
+1/9 * (1:10)
 
 moves <- sample(c(1:9, rep(5, inactivity - 1)), n = n_moves, replace = TRUE)
 xmoves <- moves$x[moves]
