--- a/sdp_individual_move_variation_nb.Rmd
+++ b/sdp_individual_move_variation_nb.Rmd
@@ -129,7 +129,7 @@ n_moves <- 300
 hosts <- host_origins %>%
   select(x, y, id) %>%
   mutate(host_id = seq_len(nrow(host_origins)),
-         inactivity = runif(n_hosts))
+         inactivity = sample(c(0, 0.25, 0.5, 0.75), size = n(), replace = TRUE))
 
 
 
@@ -152,7 +152,7 @@ c(1, rep(5, 0))
 ##### THIS IS IT 
 hosts_moving <- hosts[rep(1:nrow(hosts), each = n_moves + 1),] %>%
   mutate(time = rep(0:n_moves, n_hosts),
-         active = inactivity * sample(1:9, size = n(), replace = TRUE) < 1,
+         active = inactivity * runif(n()) >= inactivity^2,
          move_id = sample(2:9, size = n(), replace = TRUE)^active) %>%
   left_join(moveset, by = "move_id") %>%
   mutate(xmove = if_else(time == 0, x, as.integer(xmove)),
@@ -170,7 +170,12 @@ hosts_moving <- hosts[rep(1:nrow(hosts), each = n_moves + 1),] %>%
   mutate(parasite_gain = value * rbinom(n = n(), size = 1, prob = 0.5),
            parasite_burden = cumsum(parasite_gain)) ## attach parasites
 #####
-  
+
+hosts_moving %>%
+  group_by(host_id) %>%
+  summarise(inactivity = mean(inactivity),
+            moves = mean(active))
+
 length(rep(c(NA, inactivity * sample(1:9, size = n_moves, replace = TRUE) < 1), n_hosts))
 
 (9^FALSE)
