--- a/sdp_individual_move_variation_nb.Rmd
+++ b/sdp_individual_move_variation_nb.Rmd
@@ -209,6 +209,76 @@ host_moved <- tibble(host_id = hid,
            parasite_burden = cumsum(parasite_gain)) ## attach parasites
 ```
 
+now let's put that in a function
+
+```{r}
+move_host_fast <- function(hosts, coords, n_moves){
+  
+  ## grab landscape size for torus wrap
+  max_x <- max(coords$x)
+  max_y <- max(coords$y)
+  
+  ## set up moves to sample from
+  moveset <- tibble(
+      move_id = 1:9,
+      xmove = rep(c(0, -1, 1), 3),
+      ymove = rep(c(0, -1, 1), each = 3)
+      )
+  
+  hosts_moving <- hosts[rep(1:nrow(hosts), each = n_moves + 1),] %>%
+    mutate(time = rep(0:n_moves, n_hosts),
+           active = inactivity * runif(n()) >= inactivity^2,
+           move_id = sample(2:9, size = n(), replace = TRUE)^active) %>%
+    left_join(moveset, by = "move_id") %>%
+    mutate(xmove = if_else(time == 0, x, as.integer(xmove)),
+           ymove = if_else(time == 0, y, as.integer(ymove))) %>%
+    group_by(host_id) %>%
+    mutate(pre_x = cumsum(xmove),
+           pre_y = cumsum(ymove),
+           oob_x = (pre_x - 1) %/% max_x, ## calc out of bounds
+           oob_y = (pre_y - 1) %/% max_y,
+           x = pre_x - (max_x * oob_x), ## wrap around torus
+           y = pre_y - (max_y * oob_y),
+           id = str_c(x, y, sep = "_")
+           ) %>%
+    left_join(select(coords, id, value), by = "id") %>% ## bring in parasite info
+    mutate(parasite_gain = value * rbinom(n = n(), size = 1, prob = 0.5),
+           parasite_burden = cumsum(parasite_gain)) ## attach parasites
+
+    return(hosts_moving)
+}
+
+
+size <- 48
+coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2)) # Cell type starts out as 0 for all
+
+coords$value <- rbinom(n = size^2, size = 1, prob = 0.25)
+
+n_hosts <- 96 * 10 * 20
+host_origins <- slice_sample(coords, n = n_hosts, replace = TRUE)
+n_moves <- 300
+  
+hosts <- host_origins %>%
+  select(x, y, id) %>%
+  mutate(host_id = seq_len(nrow(host_origins)),
+         inactivity = sample(c(0), size = n(), replace = TRUE))
+
+Sys.time()
+fast_moved <- move_host_fast(hosts = hosts, coords = coords, n_moves = 300)
+Sys.time()
+
+Sys.time()
+moved <- map_df(1:n_hosts, 
+                ~move_host(hid = .x, hosts = hosts, coords = coords, n_moves = 300),
+                .progress = TRUE)
+Sys.time()
+
+```
+
 #### Revise Sim Function
 
 Now, allow the simulation function to pass inactivity values
